# timetracker

./: .gitignore  Cargo.toml  DEVELOPER.md  Dockerfile_centos7  INSTALL.md  LICENSE-MIT  README.md
.github/workflows/: release.yml  rust.yml
configure/: Cargo.toml
configure-bin/: Cargo.toml  README.md
configure-bin/src/: main.rs  settings.rs
configure/src/: main.rs  settings.rs
core/: Cargo.toml  README.md
core/src/: entries.rs  filesystem.rs  format.rs  lib.rs  settings.rs  storage.rs
display-bin/: Cargo.toml
display-bin/src/: constants.rs  main.rs  main_window.glade  main_window.rs  settings.rs  utils.rs
dump-bin/: Cargo.toml  README.md
dump-bin/src/: main.rs  settings.rs
print/: Cargo.toml
print-bin/: Cargo.toml  README.md
print-bin/src/: main.rs  settings.rs
print-gui-bin/: Cargo.toml
print-gui-bin/src/: constants.rs  main.rs  main_window.glade  main_window.rs  settings.rs
print-lib/: Cargo.toml  README.md
print-lib/src/: aggregate.rs  datetime.rs  lib.rs  preset.rs  print.rs  variable.rs
print/src/: aggregate.rs  datetime.rs  main.rs  print.rs  settings.rs  utils.rs  variable.rs
recorder/: Cargo.toml
recorder-bin/: Cargo.toml  README.md  build.rs
recorder-bin/src/: linux_process.rs  linux_signal.rs  linux_x11.rs  main.rs  settings.rs
recorder/src/: linux_process.rs  linux_signal.rs  linux_x11.rs  main.rs  settings.rs
share/docker/: Dockerfile_almalinux9  Dockerfile_centos7  Dockerfile_rockylinux9
