[package]
name = "timetracker-configure"
description = "Generates the Timetracker configuration file."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.19"
clap = { version = "3.2.23", features = ["std", "derive"], default-features = false }
config = { version = "0.13.3", features = ["toml"], default-features = false }
dirs = "4.0.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.159"
serde_derive = "1.0.159"
toml = "0.7.3"

[dependencies.timetracker-core]
path = "../core"
