[package]
name = "timetracker-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.19"
config = "0.13.3"
dirs = "4.0.0"
env_logger = "0.10.0"
log = "0.4.17"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.159"
serde_derive = "1.0.159"
shellexpand = "3.1.0"
sqlite = "0.26.0"
