[package]
name = "timetracker-core"
description = "The core of Timetracker."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2", features = ["std", "derive"], default-features = false }
config = { version = "0.14", features = ["toml"], default-features = false }
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = "1.0"
serde_derive = "1.0"
shellexpand = "3.1"
terminfo = "0.8.0"
