[package]
name = "timetracker-dump"
description = "Dumps Timetracker data to stdout or a file."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2", features = ["std", "derive"], default-features = false }
colored = { version = "2.1", default-features = true }
config = { version = "0.14", features = ["toml"], default-features = false }
dirs = "5.0"
env_logger = "0.11"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"

[dependencies.timetracker-core]
path = "../core"

[dependencies.timetracker-print-lib]
path = "../print-lib"
