[package]
name = "timetracker-print-gui"
description = "Timetracker displaying formated data in a graphical user interface."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2", features = ["std", "derive"], default-features = false }
config = { version = "0.14", features = ["toml"], default-features = false }
env_logger = "0.11"
glib = "0.18"
gtk = "0.18"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"

[dependencies.timetracker-core]
path = "../core"

[dependencies.timetracker-print-lib]
path = "../print-lib"
