[package]
name = "timetracker-recorder"
description = "Record user activity into the Timetracker database."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "3.2", features = ["std", "derive"], default-features = false }
config = { version = "0.14", features = ["toml"], default-features = false }
env_logger = "0.11"
glib = "0.18"
gtk = "0.18"
libc = "0.2"
log = "0.4"
once_cell = "1.17"
serde = "1.0"
serde_derive = "1.0"
x11 = "2.19"

[dependencies.timetracker-core]
path = "../core"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
